--- a/2.html
+++ b/2.html
@@ -20,7 +20,7 @@
         
       }
       .header{
-        height:190px;
+        height:100%;
         background: skyblue;
         color:white;
         text-align:center;
@@ -309,4 +309,4 @@
 
 
   </body>
-</html>
+</html> 
