--- a/2.html
+++ b/2.html
@@ -123,7 +123,7 @@
 <div class="box">
          
             <div class="top">
-             <a href="html5sc"><img src="img/h5sc.jpg"/></a>
+             <a href="html5sc/index.html"><img src="img/icon.png"/></a>
             </div>
             <div class="bottom">
               <h1>H5赛车</h1>
