--- a/2.html
+++ b/2.html
@@ -123,6 +123,17 @@
 <div class="box">
          
             <div class="top">
+             <a href="my/index.html"><img src="img/my.jpg"/></a>
+            </div>
+            <div class="bottom">
+              <h1>电子木鱼</h1>
+              <p>多敲一敲，对功德有好处。</p>
+            </div>
+         </div>
+<!--一块区域-->
+<div class="box">
+         
+            <div class="top">
              <a href="html5sc/index.html"><img src="img/icon.png"/></a>
             </div>
             <div class="bottom">
