--- a/mp/index.html
+++ b/mp/index.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="mdui-card-content">邮箱:qdgcshb@126.com</div>
                               <div class="mdui-card-content">QQ:3554954646</div>
-                             <div class="mdui-card-content">QQ:3554954646</div>
+                             <div class="mdui-card-content">QQ交流群:312961726</div>
                            <div class="mdui-card-content"> 博客开源代码下载:<a href="https://github.com/gcshb/HB">https://github.com/gcshb/HB</a></div>
                             
                                       
